; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_diff-patch.c_diff_node_alloc.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_diff-patch.c_diff_node_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diff_node = type { i32, %struct.diff_node* }

@PTRSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.diff_node* (i32, %struct.diff_node*)* @diff_node_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.diff_node* @diff_node_alloc(i32 %0, %struct.diff_node* %1) #0 {
  %3 = alloca %struct.diff_node*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.diff_node*, align 8
  %6 = alloca %struct.diff_node*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.diff_node* %1, %struct.diff_node** %5, align 8
  %7 = load i32, i32* @PTRSIZE, align 4
  %8 = call %struct.diff_node* @dyn_alloc(i32 16, i32 %7)
  store %struct.diff_node* %8, %struct.diff_node** %6, align 8
  %9 = load %struct.diff_node*, %struct.diff_node** %6, align 8
  %10 = icmp eq %struct.diff_node* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load %struct.diff_node*, %struct.diff_node** %6, align 8
  store %struct.diff_node* %12, %struct.diff_node** %3, align 8
  br label %21

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.diff_node*, %struct.diff_node** %6, align 8
  %16 = getelementptr inbounds %struct.diff_node, %struct.diff_node* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 8
  %17 = load %struct.diff_node*, %struct.diff_node** %5, align 8
  %18 = load %struct.diff_node*, %struct.diff_node** %6, align 8
  %19 = getelementptr inbounds %struct.diff_node, %struct.diff_node* %18, i32 0, i32 1
  store %struct.diff_node* %17, %struct.diff_node** %19, align 8
  %20 = load %struct.diff_node*, %struct.diff_node** %6, align 8
  store %struct.diff_node* %20, %struct.diff_node** %3, align 8
  br label %21

21:                                               ; preds = %13, %11
  %22 = load %struct.diff_node*, %struct.diff_node** %3, align 8
  ret %struct.diff_node* %22
}

declare dso_local %struct.diff_node* @dyn_alloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
